maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:26: error: type List takes type parameters
    var next:List = List.nil
             ^ShortestPathMaze:26: error: type List takes type parameters
    var next:List = List.nil
             ^ShortestPathMaze:26: error: value nil is not a member of object List
    var next:List = List.nil
                         ^ShortestPathMaze:47: error: type List takes type parameters
  var nextCase:List=List.nil
               ^ShortestPathMaze:47: error: type List takes type parameters
  var nextCase:List=List.nil
               ^ShortestPathMaze:47: error: value nil is not a member of object List
  var nextCase:List=List.nil
                         ^